Fix 'Item's name: remove letter-spacing'

--- a/demo/peacock/src/pages/catalog/pdp.css
+++ b/demo/peacock/src/pages/catalog/pdp.css
@@ -97,7 +97,6 @@
 
   .title {
     font-size: 41px;
-    letter-spacing: 2.7px;
   }
 }
 
